Adding a configuration volume for elastic search to have persistent elasticsearch data.

--- a/fig.yml
+++ b/fig.yml
@@ -7,6 +7,8 @@ kibana:
 
 elasticsearch:
   image: dockerfile/elasticsearch
+  volumes:
+    - ./elasticsearch/data:/data
   ports:
     - "9200:9200"
     - "9300:9300"
